docs/book/samples/appc/field_order_check.out
error[formatting]: fields appear in alphabetical order: `admin` before `name`
  --> field_order_check.kso:3:3
   3 |   admin: bool
         ^
