docs/book/samples/appc/field_order_check.kso
type user
  name:string
  admin:bool

main = print "x"
